add spring-security config, with csrf

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,3 +12,5 @@ spring:
     initialization-mode: always
   flyway:
     baseline-on-migrate: true
+  mustache:
+    expose-request-attributes: true
